third_party/move/language/move-compiler/tests/move_check/parser/address_too_long_decimal_exp.exp
warning[W09003]: unused assignment
  ┌─ tests/move_check/parser/address_too_long_decimal_exp.move:4:13
  │
4 │         let x = @340282366920938463463374607431768211456;
  │             ^ Unused assignment or binding for local 'x'. Consider removing, replacing with '_', or prefixing with '_' (e.g., '_x')

error[E01005]: invalid address
  ┌─ tests/move_check/parser/address_too_long_decimal_exp.move:4:18
  │
4 │         let x = @340282366920938463463374607431768211456;
  │                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Invalid address literal. The numeric value is too large. The maximum size is 16 bytes

